# THArrays.jl

./: .gitignore  LICENSE  Project.toml  README.md
.github/workflows/: BuildDylib-MacOS.yml  BuildDylib.yaml  Documetation.yml  TagBot.yml  UnitTest.yml
csrc/: CMakeLists.txt  example_app.cpp  jut_tensor.cpp  torch_api.cpp  torch_api.h  torch_capi.h  torch_capi_scalar.cpp  torch_capi_scalar.h  torch_capi_script.cpp  torch_capi_script.h  torch_capi_tensor.cpp  torch_capi_tensor.h
docs/: Project.toml  index.md  make.jl  python-api-tensor.txt
docs/src/: .dir-locals.el  ad.md  index.md  reference.md  tensor.md  torchscript.md
src/: JTorch.jl  THArrays.jl  ThArrays.jl  Torch.jl  ad.jl  api_generator.jl  common-methods.jl  grad.jl  julia-style-methods.jl  scalar.jl  script.jl  tensor.jl  th-jit.jl  thc-generator.jl  thc.jl  tracker.jl
src/compat/: tracker.jl
src/thc/: thc-generator.jl  thc-opt.jl  thc.jl
test/: grad.jl  issues.jl  runtests.jl  scalar-creation.jl  simple-script.jl  tensor-arrayif.jl  tensor-creation.jl  tensor-indexing.jl  th_tr_mixed.jl
